components/VerkkokauppaCom/index.module.css
.verkkokauppaCom {
  background-color: white;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, .05);
  position: relative;
  z-index: 1;
}

.heading {
  composes: fancyFontFamily from '_template.module.css';
  margin: 0 0 1rem 0;
}

.verkkokauppaCom h3 {
  color: #2171CC;
  margin: 0.5rem 0 0 0;
}

.header {
  align-items: center;
  background-color: #E30613;
  color: white;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  flex: 0 0 320px;
  justify-content: center;
  margin-bottom: 10rem;
  position: relative;
  text-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
}

.header::before,
.header::after {
  background-color: #E30613;
  content: '';
  display: block;
  height: 50%;
  left: 0;
  position: absolute;
  right: 0;
  z-index: -1;
}

.header::before {
  top: 0;
  transform-origin: 0%;
  transform: skewY(-2deg);
}

.header::after {
  bottom: 0;
  transform-origin: 100%;
  transform: skewY(-2deg);
}

.headerText {
  margin: 1rem;
  max-width: 480px;
}

.headerLink {
  background-color: white;
  border-radius: 2px;
  color: #333333 !important;
  text-shadow: none;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
  margin: 1rem 0;
  display: inline-block;
  line-height: 16px;
  padding: 12px 16px;
  transition: color 125ms ease-in, box-shadow 125ms ease-in;
}

.headerLink:hover {
  color: #2171CC !important;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), 0 2px 4px rgba(0, 0, 0, 0.2);
}

.headerLink:active {
  color: #333333 !important;
  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
}

.frontPageContainer {
  height: 480px;
  width: 303px;
  position: relative;
}

.frontPagePhone {
  width: 303px;
  display: block;
}

.frontPageImage {
  display: block;
  width: 270px;
  position: absolute;
  top: 63px;
  left: 15px;
}

.deliveryEstimate {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  padding-top: 2rem;
}

.deliveryEstimateText {
  margin: 0 1rem 2rem 1rem;
  max-width: 480px;
}

.deliveryEstimateText h3 {
  color: #2171CC;
  margin: 0.5rem 0 0 0;
}

.deliveryEstimateImage {
  align-items: center;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  position: relative;
}

.deliveryEstimateImage img {
  display: block;
}

.ipad {
  background-color: #A4ABB3;
  box-sizing: border-box;
  clip-path: polygon(0 0, 100% 6%, 100% 100%, 0 94%);
  display: flex;
  align-items: center;
  height: 480px;
  margin-bottom: 2rem;
  overflow: hidden;
  padding: 6% 1rem;
  position: relative;
  width: 100%;
}

.ipadImage {
  display: block;
  left: 50%;
  min-width: 100%;
  object-fit: fill;
  opacity: 0.2;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: -1;
}

.ipadText {
  color: white;
  margin: 1rem auto;
  max-width: 480px;
  text-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
}

.ipadTextHeading {
  composes: heading;
}

.priceBarometer {
  overflow-x: hidden;
  position: relative;
  width: 100%;
}

.priceBarometerGraph {
  height: 120px;
  left: 50%;
  position: relative;
  transform: translateX(-50%);
  width: 1920px;
}

.priceBarometerImage {
  display: block;
  margin: 0 auto -48px auto;
  width: 368px;
}

